fix pop up overflow, fix starting point

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ nav {
     display: inline-block;
     background-color: #fee6ce;
     width: 100%;
+    overflow: scroll;
 
 }
 
